Add more .env variables (instead of using a separate .yaml file)

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,16 @@
 # ANTHROPIC_API_KEY=
 
 # ==== OPENAI ====
-OPENAI_API_KEY=...
-BASE_URL=http://localhost:8080/openai/v1
+OPENAI_API_KEY=...                                  # [!]
+OPENAI_API_BASE=http://localhost:8080/openai/v1     # [!]
+
+# ==== GigaChat ====
+GIGA_USER: ...                               # [!]
+GIGA_PASSWORD: ...                           # [!]
+GIGA_CREDENTIALS: ...                        # [!]
+GIGA_AUTH_URL: ...                           # Defaults to https://gigachat.sberdevices.ru/v1/token
+GIGA_BASE_URL: ...                           # Defaults to https://gigachat.sberdevices.ru/v1
+GIGA_MODEL: ...                              # Defaults to GigaChat-2
+GIGA_PROFANITY_CHECK=...                     # Defaults to False
+GIGA_SCOPE=...                               # [!]
+GIGA_TIMEOUT=                                # Defaults to 200
